--- a/Commands/commands.html
+++ b/Commands/commands.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
 
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+</style>
+    <title> Zinc - The only bot u need. </title>
+    <meta property="og:title" content="Zinc - The only bot u need."itemprop="title">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <h1> Commands </h1>
+    <table>
+        <tr>
+            <th>Commands</th>
+            <th>Usage</th>
+            <th>Description</th>
+        </tr>
+        <tr>
+            <td>Help</td>
+            <td>-Help</td>
+            <td>Shows the help menu for the bot</td>
+        </tr>
+    </table>
+    <script src="script.js"></script>
+  </body>
+</html>
