--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </style>
 </head>
 <body>
+    <p> test 2 </p>
     <h1>This is a test</h1>
     <a href="./Commands/commands.html">Click here for commands</a>
     <p>This is the Zinc Bot Main page</p>
